
        * Scripts/bugzilla-tool: Clarify the "applying" log message.
        * Scripts/modules/bugzilla.py:
         - Add a new _validate_committer_and_reviewer function as a
           temporary solution until we can make a real Attachment object
           which knows how to fill in its committer/reviewer fields automatically.

2009-11-17  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Oliver Hunt.

        Make the timeout 15 sec as for the other DRT's and make
        it print out the same output when a test timeout.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::waitUntilDone):
        (LayoutTestController::notifyDone):
        (LayoutTestController::timerEvent):

2009-11-17  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Timothy Hatcher.

        Fixed typos in comments.

        * Scripts/modules/committers.py:

2009-11-17  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Make DRT show web inspector for tests in inspector/ folder.
        - Updated DRT to show/close inspector for all tests under /inspector
        - Introduced LayoutTestController::setTimelineProfilingEnabled and
          WebInspector::setTimelineProfilingEnabled beside setJavaScriptProfilingEnabled
        - Removed reload on each inspector test
        - Renamed fast/inspector to fast/inspector-support in order not to trigger
        inspector for those.
        - Reimplemented timeline tests in order to get rid of reload there.
        - Moved tests that don't require harness into the fast group.

        https://bugs.webkit.org/show_bug.cgi?id=31472

        * DumpRenderTree/LayoutTestController.cpp:
        (setTimelineProfilingEnabledCallback):
        (closeWebInspectorCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/gtk/DumpRenderTree.cpp: